# TinyS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TLDR.md
.github/workflows/: docs.yml
doc/draft/: flow-control-basic.md  flow-control-match.md  syntax-general.md  syntax-n-interop.md
doc/issues/open/: 0001-early-limitations.md
doc/public/: README.md  mkdocs.yml  requirements.txt
doc/public/docs/: index.md
doc/public/docs/about/: contributing.md  roadmap.md  status.md
doc/public/docs/advanced/: async.md  generated-rust.md  index.md  interop.md  lifetimes.md  macros.md  unsafe.md
doc/public/docs/examples/: index.md
doc/public/docs/getting-started/: hello-world.md  index.md  installation.md  tutorial.md
doc/public/docs/guide/: closures.md  collections.md  control-flow.md  error-handling.md  functions.md  generics.md  index.md  modules.md  ownership.md  pattern-matching.md  structs-and-enums.md  syntax.md  traits.md  variables.md
doc/public/docs/reference/: cheatsheet.md  cli.md  index.md  keywords.md
doc/public/docs/stylesheets/: extra.css
examples/: closures.sn  control_flow.sn  enums.sn  fizzbuzz.sn  functions.sn  generics.sn  hello.sn  json_user.sn  loops.sn  macros.sn  references.sn  structs.sn  tinys.toml
examples/modules/: tinys.toml
examples/modules/src/: app.sn  models.sn  models_test.sn
examples/modules/src/scratch/: broken.sn
src/: ast.rs  codegen.rs  diagnostics.rs  lexer.rs  lib.rs  main.rs  manifest.rs  modules.rs  parser.rs
tests/: cargo_build.rs  codegen.rs  examples.rs  modules.rs
(+2 files in other folders)
