[package]
name = "tinys"
version = "0.1.0"
edition = "2021"
description = "TinyS — a Python-shaped, Rust-semantics language that transpiles .sn source to Rust"
license = "MIT"
repository = "https://github.com/ewiger/TinyS"
homepage = "https://ewiger.github.io/TinyS/"
readme = "README.md"
keywords = ["language", "compiler", "transpiler", "rust", "python"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "tinys"
path = "src/main.rs"

[lib]
name = "tinys"
path = "src/lib.rs"

[profile.release]
opt-level = 2
